init: spring v3 - java 21 - no tests