@@ -1,146 +1,124 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.springframework.boot.gradle.tasks.bundling.BootJar
+import org.gradle.kotlin.dsl.withType
 
 plugins {
-    kotlin("plugin.jpa") version "1.3.72"
-    kotlin("jvm") version "1.6.21"
-    kotlin("plugin.spring") version "1.3.72"
-    kotlin("plugin.allopen") version "1.3.72"
-    kotlin("kapt") version "1.3.72"
-    id("org.springframework.boot") version "2.2.6.RELEASE"
-    id("io.spring.dependency-management") version "1.0.9.RELEASE"
+	kotlin("jvm") version "1.9.25"
+	kotlin("plugin.spring") version "1.9.25"
+	id("org.springframework.boot") version "3.4.5"
+	id("io.spring.dependency-management") version "1.1.7"
+	id("org.asciidoctor.jvm.convert") version "3.3.2"
+	kotlin("plugin.jpa") version "1.9.25"
+	// asd
+	kotlin("kapt") version "1.3.72"
 }
 
-group = "snc.openchargingnetwork.node"
-version = "1.2.0-rc2"
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+group = "snc.openchargingnetwork"
+version = "1.3.0"
 
-val snippetsDir = "build/generated-snippets"
+extra["snippetsDir"] = file("build/generated-snippets")
 
-val developmentOnly: Configuration by configurations.creating
 configurations {
-    runtimeClasspath {
-        extendsFrom(developmentOnly)
-    }
+	runtimeClasspath {
+		extendsFrom(implementation.get())
+	}
+}
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
 }
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter() // Use cautiously as it's deprecated
-    gradlePluginPortal() // Added for plugin dependencies
-    maven("https://jitpack.io") // Add this line
-}
-
-dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-web")
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("org.danilopianini:khttp:1.2.2")
-    implementation("org.web3j:core:4.5.5")
-    implementation("org.postgresql:postgresql:42.2.12")
-    implementation("com.jayway.jsonpath:json-path:2.9.0")
-    implementation("com.aayushatharva.brotli4j:brotli4j:1.7.0")
-    runtimeOnly("com.h2database:h2")
-    kapt("org.springframework.boot:spring-boot-configuration-processor")
-    developmentOnly("org.springframework.boot:spring-boot-devtools")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude(module = "junit")
-        exclude(module = "junit-vintage-engine")
-        exclude(module = "mockito-core")
-        exclude(module = "android-json")
-    }
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
-    testImplementation("com.ninja-squad:springmockk:2.0.0")
-    testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc:2.0.4.RELEASE")
-    testImplementation("io.javalin:javalin:3.8.0")
-    testImplementation("org.awaitility:awaitility-kotlin:4.0.2")
-
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.6.4")
-    implementation("org.slf4j:slf4j-api:1.7.36")
-}
-
-allOpen {
-    annotation("javax.persistence.Entity")
-    annotation("javax.persistence.Embeddable")
-    annotation("javax.persistence.MappedSuperclass")
-}
-
-tasks.withType<KotlinCompile> {
-    kotlinOptions {
-        freeCompilerArgs = listOf("-Xjsr305=strict")
-        jvmTarget = "1.8"
-    }
+	mavenCentral()
 }
 
 val test: Test by tasks
 test.apply {
-    description = "Runs OCN Node unit and integration tests (note: integration tests depend on ganache-cli running)."
-    dependsOn("unitTest", "integrationTest")
-    outputs.dir(snippetsDir)
+	description = "Runs OCN Node unit and integration tests (note: integration tests depend on ganache-cli running)."
+	dependsOn("unitTest", "integrationTest")
+	outputs.dir(project.extra["snippetsDir"]!!)
 }
 
 tasks.register<Test>("unitTest") {
-    group = "verification"
-    description = "Runs OCN Node unit tests."
-    useJUnitPlatform()
-    exclude("**/integration/**")
+	group = "verification"
+	description = "Runs OCN Node unit tests."
+	useJUnitPlatform()
+	exclude("**/integration/**")
 }
 
 tasks.register<Test>("integrationTest") {
-    group = "verification"
-    description = "Runs OCN Node integration tests (note: depends on a ganache-cli process running)."
-    useJUnitPlatform()
-    include("**/integration/**")
-}
-
-tasks.register<Exec>("ganache") {
-    group = "help"
-    description = "Runs a ganache-cli instance for integration testing."
-    commandLine(listOf(
-        "/usr/bin/env",
-        "ganache-cli",
-        "-m=candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",
-        "--port=8544",
-        "--accounts=20",
-        "--networkId=9",
-        "--gasLimit=10000000"
-    ))
+	group = "verification"
+	description = "Runs OCN Node integration tests (note: depends on a ganache-cli process running)."
+	useJUnitPlatform()
+	include("**/integration/**")
 }
 
 (tasks.getByName("processResources") as ProcessResources).apply {
-    val profile: String by project
-    println("Building using **/application.$profile.properties")
-    include("**/application.$profile.properties")
-    rename { "application.properties" }
+	val profile: String by project
+	println("Building using **/application.$profile.properties")
+	include("**/application.$profile.properties")
+	rename { "application.properties" }
 }
 
 tasks.register<Tar>("archive") {
-    group = "build"
-    description = "Assembles a tar archive with GZIP compression for distribution."
-    archiveFileName.set("ocn-node-${project.version}.tar.gz")
-    destinationDirectory.set(file("$buildDir/dist"))
-    compression = Compression.GZIP
+	group = "build"
+	description = "Assembles a tar archive with GZIP compression for distribution."
+	archiveFileName.set("ocn-node-${project.version}.tar.gz")
+	destinationDirectory.set(file("build/dist"))
+	compression = Compression.GZIP
 
-    into ("/ocn-node-${project.version}") {
-        from(
-            "$buildDir/libs/ocn-node-${project.version}.jar",
-            "src/main/resources/application.dev.properties",
-            "src/main/resources/application.prod.properties",
-            "infra/ocn-node.service",
-            "README.md",
-            "CONFIGURATION.md",
-            "CHANGELOG.md"
-        )
-    }
+	into ("/ocn-node-${project.version}") {
+		from(
+			"build/libs/ocn-node-${project.version}.jar",
+			"src/main/resources/application.dev.properties",
+			"src/main/resources/application.prod.properties",
+			"infra/ocn-node.service",
+			"README.md",
+			"CONFIGURATION.md",
+			"CHANGELOG.md"
+		)
+	}
 }
 
-tasks.withType<JavaExec> {
-    jvmArgs = listOf(
-        "--add-opens", "java.base/java.net=ALL-UNNAMED"
-    )
+dependencies {
+	implementation("org.springframework.boot:spring-boot-starter-web")
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation("org.jetbrains.kotlin:kotlin-reflect")
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	runtimeOnly("com.h2database:h2")
+	runtimeOnly("org.postgresql:postgresql")
+	testImplementation("org.springframework.boot:spring-boot-starter-test") {
+		exclude(module = "android-json")
+	}
+	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+	testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
+	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+
+	// Project-Specific
+	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+	implementation("org.danilopianini:khttp:1.6.3")
+	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
+	implementation("org.web3j:core:5.0.0")
+	implementation("com.jayway.jsonpath:json-path:2.9.0")
+	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+	kapt("org.springframework.boot:spring-boot-configuration-processor")
+}
+
+allOpen {
+	annotation("jakarta.persistence.Entity")
+	annotation("jakarta.persistence.MappedSuperclass")
+	annotation("jakarta.persistence.Embeddable")
+}
+
+tasks.withType<Test> {
+	useJUnitPlatform()
+}
+
+tasks.test {
+	outputs.dir(project.extra["snippetsDir"]!!)
+}
+
+tasks.asciidoctor {
+	inputs.dir(project.extra["snippetsDir"]!!)
+	dependsOn(tasks.test)
 }
